# etl-odoo-gym

./: README.md  pyproject.toml
tcc/: main.py  tcc.py
tcc/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tcc/database/: config.py  database.py
tcc/utils/: dataframes.py  db_utils.py  sql_queries.py
